--- a/src/index.css
+++ b/src/index.css
@@ -161,7 +161,7 @@
     display: flex;
     flex-direction: column;
     height: 100vh;
-    background-color: #f5f5f5;
+    
   }
   .content-wrapper {
     display: flex;
@@ -876,6 +876,7 @@ body {
     background: white !important;
     cursor: pointer !important;
     transition: all 0.2s ease !important;
+    margin-bottom: 10px !important;
   }
   .btn-back:hover {
     background: #fef2f2 !important;
