--- a/src/index.css
+++ b/src/index.css
@@ -666,6 +666,8 @@ body {
     border-radius: 4px;
     border: 1px solid #d1d5db;
     margin-bottom: 24px;
+    max-width: 100%;
+    overflow-x: hidden;
   }
   .data-table {
     width: 100%;
@@ -674,6 +676,7 @@ body {
   }
   .table-header {
     background-color: #fde2e2;
+    
   }
   .table-th {
     padding: 8px;
