--- a/src/index.css
+++ b/src/index.css
@@ -196,8 +196,7 @@
   border-radius: 8px;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
   padding: 32px;
-  max-width: 1280px;
-  margin: 0 auto;
+  width: 100% ;
   margin-bottom: 10px;
 }
 .page-title {
